argocd/argocd-notifications-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-notifications-controller

# NOTE: currently not specifiable in argocd-cmd-params-cm.yaml
spec:
  template:
    spec:
      containers:
        - name: argocd-notifications-controller
          args:
            - /usr/local/bin/argocd-notifications
            - --loglevel=warn
