argocd/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server

spec:
  entryPoints:
    - websecure
  tls:
    secretName: argocd-server-tls
  routes:
    - kind: Rule
      match: Host(`cd.trap.jp`) && PathPrefix(`/api/webhook`)
      services:
        - kind: Service
          namespace: argocd
          name: argocd-server
          port: 80
          scheme: http
          strategy: RoundRobin
          weight: 1
    - kind: Rule
      match: Host(`cd.trap.jp`)
      middlewares:
        - name: auth
          namespace: traefik
      services:
        - kind: Service
          namespace: argocd
          name: argocd-server
          port: 80
          scheme: http
          strategy: RoundRobin
          weight: 1
