argocd/argocd-applicationset-controller-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-applicationset-controller-network-policy

spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: traefik
      ports:
        - port: 7000
          protocol: TCP
        - port: 8080
          protocol: TCP
