argocd/argocd-server-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-server-network-policy

spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: traefik
      ports:
        - port: 80
          protocol: TCP
